--- a/socail-media-app/style.css
+++ b/socail-media-app/style.css
@@ -121,5 +121,141 @@ main {
   position: relative;
   top: 5.6rem;
 }
-
+main .container {
+  display: grid;
+  grid-template-columns: 18vw auto 20vw;
+  position: relative;
+  column-gap: 2rem;
+}
 /* Side Bar */
+main .container .left {
+  height: max-content;
+  position: sticky;
+  top: var(--sticky-top-left);
+}
+main .left .top-profile {
+  background: var(--color-white);
+  border-radius: var(--card-border-radius);
+  padding: var(--card-padding);
+}
+main .left .top-profile .handle {
+  margin-top: 0.8rem;
+}
+main .left .side-bar {
+  margin-top: 1rem;
+
+  background: var(--color-white);
+  border-radius: var(--card-border-radius);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 2rem;
+}
+main .left .side-bar .menu-item {
+  display: flex;
+  align-items: center;
+  /* gap: 1rem; */
+  /* padding-left: 1rem; */
+  cursor: pointer;
+  transition: all 300ms ease;
+  position: relative;
+}
+main .left .side-bar .menu-item:hover {
+  background: var(--color-light);
+}
+main .left .side-bar .menu-item .menu-icon {
+  border: 2px solid red;
+}
+.notification-count {
+  position: absolute;
+  background: var(--color-danger);
+  color: white;
+  font-size: 0.7rem;
+  width: fit-content;
+  border-radius: 0.8rem;
+  padding: 0.1rem 0.4rem;
+  position: absolute;
+  top: -0.2rem;
+  left: -0rem;
+}
+main .left .side-bar .menu-item h3 {
+  font-size: 1rem;
+  margin-left: 1.5rem;
+}
+main .left .side-bar .menu-item.active {
+  background: var(--color-light);
+}
+main .left .side-bar .menu-item.active h3 {
+  color: var(--color-primary);
+}
+main .left .side-bar .menu-item.active .icon-test {
+  color: var(--color-primary);
+}
+main .left .side-bar .menu-item.active::before {
+  content: "";
+  display: block;
+  width: 0.5rem;
+  height: 100%;
+  position: absolute;
+  background: var(--color-primary);
+}
+main .left .sidebar .menu-item:first-child.active {
+  border-top-left-radius: var(--card-border-radius);
+  overflow: hidden;
+}
+.left .sidebar .menu-item:last-child.active {
+  border-bottom-left-radius: var(--card-border-radius);
+  overflow: hidden;
+}
+main .left .sidebar .menu-item + .icon-menu {
+  margin-top: 1rem;
+  margin-left: 1rem;
+}
+
+.icon-test {
+  margin-left: 1rem;
+  font-size: 2rem;
+}
+.left .btn {
+  margin-top: 1rem;
+  width: 100%;
+  text-align: center;
+  /* padding: 1rem 0; */
+}
+.message-popup {
+  position: absolute;
+  top: 0;
+  left: 110%;
+  width: 30rem;
+  background: var(--color-white);
+  border-radius: var(--card-border-radius);
+  box-shadow: 0 0 rem hsl(var(--color-primary), 75%, 25%);
+  z-index: 8;
+  padding: 1rem 1rem;
+
+  /* margin-left: 2rem; */
+  display: none;
+}
+.left .message-popup::before {
+  content: "";
+  /* content: ""; */
+  width: 1.2rem;
+  height: 1.2rem;
+  display: block;
+  background: var(--color-white);
+  /* background: red; */
+  /* border: 2px solid red; */
+  position: absolute;
+  left: -0.6rem;
+  transform: rotate(45deg);
+}
+.message-popup > div {
+  display: flex;
+  /* display: flex; */
+  align-items: center;
+  gap: irem;
+  margin-top: 1rem;
+}
+.message-popup > div small {
+  display: block;
+}
