--- a/socail-media-app/style.css
+++ b/socail-media-app/style.css
@@ -259,3 +259,121 @@ main .left .sidebar .menu-item + .icon-menu {
 .message-popup > div small {
   display: block;
 }
+/* Side end */
+
+/* middle start */
+
+.middle .storeis {
+  display: flex;
+  justify-content: space-between;
+  height: 12rem;
+  gap: 0.5rem;
+  /* background: red; */
+}
+.middle .storeis .story {
+  padding: var(--card-padding);
+  border-radius: var(--card-border-radius);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  color: var(--color-white);
+  font-size: 0.75rem;
+  width: 100%;
+  background: red;
+  position: relative;
+  overflow: hidden;
+}
+.middle .storeis .story::before {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 5rem;
+  background: linear-gradient(transparent, rgba(0, 0, 0.75));
+  position: absolute;
+  bottom: 0;
+  /* z-index: 1; */
+}
+.middle .storeis .story .name {
+  z-index: 2;
+}
+
+.middle .story .profile-picture {
+  width: 2rem;
+  height: 2rem;
+  align-self: start;
+  border: 3px solid var(--color-primary);
+}
+
+.middle .create-post {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background: var(--color-white);
+  margin-top: 1rem;
+  padding: 0.4rem var(--card-padding);
+  border-radius: var(--border-radius);
+}
+.middle .create-post .profile-pictures {
+  width: 2.7rem;
+  aspect-ratio: 1/1;
+  border-radius: 50%;
+  overflow: hidden;
+  background: var(--color-primary);
+}
+.middle .create-post input[type="text"] {
+  justify-self: start;
+  width: 100%;
+  padding-left: 1rem;
+  background: transparent;
+  color: var(--color-dark);
+}
+/* Feed */
+.middle .feeds .feed {
+  background: var(--color-white);
+  border-radius: var(--border-radius);
+  padding: var(--card-padding);
+  margin: 1rem 0;
+  font-size: 0.85rem;
+  line-height: 1.5rem;
+}
+
+.middle .feed .head {
+  display: flex;
+  justify-content: space-between;
+}
+.middle .feed .user {
+  display: flex;
+  gap: 1rem;
+}
+.middle .feed .photo {
+  border-radius: var(--card-border-radius);
+  overflow: hidden;
+  margin: 0.7rem 0;
+}
+.middle .feed .action-btn {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 0.4rem;
+  margin: 0.6rem;
+}
+.middle .like-by {
+  display: flex;
+}
+.middle .like-by span {
+  width: 1.4rem;
+  height: 1.4rem;
+  display: block;
+  border-radius: 50%;
+  overflow: hidden;
+  border: 2px solid var(--color-white);
+  margin-left: -0.6rem;
+}
+.middle .like-by span:first-child {
+  margin: 0;
+}
+.middle .like-by p {
+  margin-left: 0.5rem;
+}
