--- a/socail-media-app/style.css
+++ b/socail-media-app/style.css
@@ -377,3 +377,107 @@ main .left .sidebar .menu-item + .icon-menu {
 .middle .like-by p {
   margin-left: 0.5rem;
 }
+/* Right Side */
+
+main .conatiner .right {
+  height: max-content;
+  position: sticky;
+  top: var(--sticky-top-right);
+  bottom: 0;
+}
+.right .messages {
+  background: var(--color-white);
+
+  border-radius: var(--card-border-radius);
+  padding: var(--card-padding);
+}
+.right .messages .heading {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 1rem;
+}
+.right .messages .search-bar {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 1rem;
+  border-radius: var(--card-border-radius);
+  background: var(--color-light);
+}
+.right .messages .search-bar input[type="search"] {
+  background: transparent;
+  width: 30vw;
+  margin-left: 1rem;
+  font-size: 0.9rem;
+  color: var(--color-dark);
+}
+.right .messages .category {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 1rem;
+}
+.right .messages .category h6 {
+  width: 100%;
+  text-align: center;
+  border-bottom: 4px solid var(--color-light);
+  padding-bottom: 0.5rem;
+  font-size: 0.85rem;
+}
+.right .messages .category .active {
+  border-color: var(--color-primary);
+}
+.message {
+  display: flex;
+  gap: 1rem;
+  margin-bottom: 1rem;
+  align-items: start;
+  border-radius: var(--card-border-radius);
+  background: var(--color-white);
+}
+.message .profile-picture {
+  position: relative;
+  /* overflow: visible; */
+}
+.message .profile-picture img {
+  border-radius: 40%;
+}
+.message:last-child {
+  margin: 0;
+}
+
+.right .messages .message p {
+  font-size: 0.8rem;
+}
+.right .messages .message .profile-picture .active {
+  width: 0.8rem;
+  height: 0.8rem;
+  border-radius: 50%;
+  border: 3px solid var(--color-white);
+  position: absolute;
+  background: var(--color-success);
+  top: 2;
+  bottom: 5px;
+}
+/* Friend requests */
+.right .friend-request h4 {
+  color: var(--color-gray);
+  margin: 1rem 0;
+}
+.right .request {
+  background: var(--color-white);
+  border-radius: var(--card-border-radius);
+  padding: var(--card-padding);
+  margin-top: 0.7rem;
+}
+.right .request .info {
+  display: flex;
+  gap: 1rem;
+  margin-bottom: 1rem;
+}
+
+.right .request .action {
+  display: flex;
+  gap: 1rem;
+}
